1.0.0 javadoc target java 8 lul free ci readme